--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
 <style>
   body {
     font-family: Arial, sans-serif;
-    background-color: black;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url("sapeint-dark-logo.png");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: black;
+    opacity: 0.9;
   }
 
   .login-container {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.3); 
+    text-emphasis-color: white;
     padding: 30px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   }
 
   h2 {
@@ -40,7 +46,7 @@
 
   input[type="submit"] {
     width: 100%;
-    background-color: #4caf50;
+    background-color: #1c0053;
     color: white;
     padding: 10px;
     border: none;
@@ -51,14 +57,13 @@
   }
 
   input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #000000;
   }
 </style>
 </head>
 <body>
 
 <div class="login-container">
-  <h2>Digital Scavenger Hunt</h2>
   <form action="#" method="post" onsubmit="return validateForm()">
     <input type="text" name="username" id="username" placeholder="Username" required>
     <input type="password" name="password" id="password" placeholder="Password" required>
@@ -90,4 +95,3 @@ function validateForm() {
 
 </body>
 </html>
-
