Update index.html size of logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     align-items: center;
     height: 100vh;
     background-image: url("sapeint-dark-logo.png");
-    background-size: contain;
+    background-size: 33%;
     background-position: center;
     background-repeat: no-repeat;
     background-color: black;
