--- a/IAV.html
+++ b/IAV.html
@@ -6,20 +6,22 @@
     body
     {
         background-color: black;
+        color: white;
     }
 </style>
 <body>
-<center>
-<h1>Display Multimedia-Data</h1>
-<img src="The Wanaka Tree.jpeg" height="700px" width="1000px">
-<h4>Imgae tag</h4><br>
-</center>
-<hr>
-<center><audio controls>
-    <h4>This is Audio file</h4><br>
-<source src="Village People - YMCA OFFICIAL Music Video 1978.m4a" type="audio/mpeg">
-</audio><br>
-</center>
-<hr>
+    <center>
+        <video height="500px" width="500" controls>
+        <source src="Deans Video compressed.mp4" type="video/mp4">
+        </video><br>
+        <hr>
+    
+
+        <h2>Which is a Pirate's favorite programming Language?<br><br>
+         When look in a mirror is this who do you see?<br><br>
+        Without this special character your email will be lost<br>in the sea and wont reach its destination.
+        </h2>
+            
+
 </body>
 </html>
