--- a/IAV.html
+++ b/IAV.html
@@ -5,6 +5,16 @@
 <style>
     body
     {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-image: url("Screenshot_2024-03-23_113102-removebg.png");
+        background-size: 33%;
+        background-position: center;
         background-color: black;
         color: white;
     }
