--- a/IAV.html
+++ b/IAV.html
@@ -28,8 +28,8 @@
     
 
         <h2>Which is a Pirate's favorite programming Language?<br><br>
-         When look in a mirror is this who do you see?<br><br>
-        Without this special character your email will be lost<br>in the sea and wont reach its destination.
+         When look in a mirror, who do you see?<br><br>
+        Without this special character your email will be lost<br>in the sea and wont reach its destiny.
         </h2>
             
 
