--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ function validateForm() {
     var password = document.getElementById("password").value;
     
     var users = {
-        "user1": "password1",
-        "user2": "password2",
-        "user3": "password3",
+        "motherboard31719": "3jk9uh4pq5",
+        "staticdrive202311": "x7f2rp9sl6",
+        "graphiccard2103": "a5t8bq2we9",
     };
     
     if (users[username] === password) {
