--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ function validateForm() {
         "motherboard31719": "3jk9uh4pq5",
         "staticdrive202311": "x7f2rp9sl6",
         "graphiccard2103": "a5t8bq2we9",
+        "user10": "password10",
     };
     
     if (users[username] === password) {
